One page per class

--- a/templates/index.j2
+++ b/templates/index.j2
@@ -15,7 +15,7 @@
    <img src="alta3-logo.jpg" width="100" alt="Alta3 Logo" >
    <div class="container">  
     <div class="headerrow"><strong>
-         <div class="col-xs-12 text-rght">Tracking LAB: {{ lab_assignment.lab }} in CLASS_ID: {{ lab_assignment.class_id }}</div> 
+         <div class="col-xs-12 text-rght">Tracking LAB: {{ lab }} in CLASS_ID: {{ id }}</div> 
     </div>
     <div class="headerrow"><strong>
          <div class="col-xs-12 text-rght">GTG COUNTER: {{ gtg_counter }}</div> 
